# innate-os

./: .dockerignore  .env  .env.template  .gcloudignore  .gitignore  .gitmodules  .whiteboard_calibration.json  AUTH0_SETUP.md  DEPENDENCIES.md  DOCKER_MIGRATION.md  Dockerfile  Dockerfile.build  Dockerfile.prod  Dockerfile.ros-prebuilt  Dockerfile.ros-prebuilt.dockerignore  Dockerfile.test  Makefile  QUICKSTART.md  README.md  SIMULATION_MODE.md  SYSTEM_OVERVIEW.md  SYSTEM_SETUP.md  TODO.md  WILDROBOT.md  bi_directional_agent_genesis.py  bridge_node.py  cloudbuild.sim-images.yaml  cyclonedds_container.xml  cyclonedds_host.xml  depth_diagnostics.py  depth_estimation_corrected.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  frames_2025-12-10_14.32.02.gv  generate-test.py  hardware_test.py  innate  install.sh  (+28 more)
.cargo/: config.toml
.claude/: settings.local.json
.githooks/: pre-commit
agent/: agent_node.py  agent_node_ws.py
agent_codegen/: __init__.py  client.py  generator.py  models.py  pipeline.py  prompt.py  pyproject.toml
agent_codegen/tests/: test_client.py  test_generator.py  test_models.py  test_prompt.py
agents/: agent_repeater.py  basic_agent.py  board_calibration_agent.py  calibrating_self_calibrating_agent.py  chemi_agent.py  chemist_agent.py  chess_agent.py  chess_piece_agent.py  chess_self_play_agent.py  demo_agent.py  draw_circle_agent.py  draw_triangle.py  empty_directive.py  friendly_robot_agent.py  hello_world_directive.py  j3so_directive.py  mars_directive.py  orchestrator_agent.py  robohack_agent.py  security_guard_directive.py  voice_assistant_agent.py
benchmarks/: README.md  TODO.md  (+7 more)
ros2_ws/src/brain/innate_webrtc_streamer/: CMakeLists.txt  package.xml
ros2_ws/src/brain/innate_webrtc_streamer/config/: webrtc_params.yaml
ros2_ws/src/brain/innate_webrtc_streamer/innate_webrtc_streamer/: __init__.py  webrtc_streamer.py  webrtc_streamer_node.py
ros2_ws/src/brain/innate_webrtc_streamer/launch/: webrtc_streamer.launch.py
ros2_ws/src/brain/voice_client/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/brain/voice_client/launch/: voice_client.launch.py
ros2_ws/src/brain/voice_client/voice_client/: voice_client_node.py
ros2_ws/src/maurice_bot/mars_control_rust/: Cargo.toml  package.xml
ros2_ws/src/maurice_bot/mars_control_rust/launch/: mars_control.launch.py
ros2_ws/src/maurice_bot/mars_control_rust/src/: main.rs
ros2_ws/src/maurice_bot/maurice_arm/: CMakeLists.txt  package.xml
ros2_ws/src/maurice_bot/maurice_arm/config/: arm_config.yaml  moveit.yaml  pid_tuning.yaml
ros2_ws/src/maurice_bot/maurice_arm/include/maurice_arm/: arm_node.hpp  arm_types.hpp  collision_checker.hpp  dynamixel.hpp  robot.hpp
ros2_ws/src/maurice_bot/maurice_arm/launch/: arm.launch.py  arm_core.launch.py  ik.launch.py  planning.launch.py
ros2_ws/src/maurice_bot/maurice_arm/maurice_arm/: arm.cpp  arm.py  arm_control.cpp  arm_node.cpp  arm_services.cpp  arm_trajectory.cpp  arm_utils.py  camera.cpp  collision_checker.cpp  collision_checker_main.cpp  dynamixel.cpp  dynamixel.py  ik.py  maurice_arm.py  pid_hot_reload.py  robot.cpp  robot.py  servo_manager.py  test.py  urdf.py
ros2_ws/src/maurice_bot/maurice_cam/: CMakeLists.txt  package.xml
ros2_ws/src/maurice_bot/maurice_cam/config/: stereo_depth_estimator.yaml
ros2_ws/src/maurice_bot/maurice_cam/include/maurice_cam/: arm_camera_driver.hpp  camera_driver.hpp  main_camera_driver.hpp  main_camera_info.hpp  stereo_depth_estimator.hpp  webrtc_streamer.hpp
ros2_ws/src/maurice_bot/maurice_cam/launch/: arm_camera_driver.launch.py  camera_composable.launch.py  camera_driver.launch.py  main_camera_driver.launch.py  stereo_calibrator.launch.py  stereo_depth_estimator.launch.py  webrtc_streamer.launch.py  webrtc_streamer.sim.launch.py
ros2_ws/src/maurice_bot/maurice_cam/maurice_cam/: arm_camera_driver.cpp  calibration_utils.py  camera_driver.cpp  main_camera_driver.cpp  main_camera_info.cpp  remote_throttle_nodes.py  stereo_calibration.cpp  stereo_calibrator.py  stereo_depth_estimator.cpp  webrtc_streamer.cpp
ros2_ws/src/maurice_bot/maurice_cam/maurice_cam/depth_estimator/: calibration.cpp  rectification.cpp  vpi_stereo.cpp
ros2_ws/src/maurice_bot/maurice_cam/maurice_cam/filters/: advanced_filters.cpp  domain_transform.cu  filter_chain.cpp  implementation.md
ros2_ws/src/maurice_bot/maurice_cam/scripts/: bandwidth_test.py  record_stereo.py
ros2_ws/src/maurice_bot/maurice_head/: CMakeLists.txt  package.xml
ros2_ws/src/maurice_bot/maurice_head/launch/: head.launch.py
ros2_ws/src/maurice_bot/maurice_head/maurice_head/: head.py  servo_node.py
ros2_ws/src/maurice_bot/maurice_nav/: CMakeLists.txt  package.xml
ros2_ws/src/maurice_bot/maurice_nav/config/: amcl.yaml  behavior.yaml  bt_navigator.yaml  controller.yaml  costmap.yaml  costmap_with_vision.yaml  localization_params.yaml  mapping_params_init.yaml  nav2_navigation_params.yaml  nav2_navigation_params_sim.yaml  nav_to_pose.xml  nav_to_pose_mapfree.xml  planner.yaml  velocity_smoother.yaml
ros2_ws/src/maurice_bot/maurice_nav/include/maurice_nav/: lifecycle_service_utils.hpp  mode_manager.hpp  navigate_to_pose_router.hpp
ros2_ws/src/maurice_bot/maurice_nav/launch/: localization.launch.py  mapfree_local_nav.launch.py  mapping.launch  mapping.launch.py  mapping_explore.launch.py  mode_manager.launch.py  navigation.launch.py  navigation_sim.launch.py  planner.launch.py  vision_nav.launch.py
ros2_ws/src/maurice_bot/maurice_nav/maurice_nav/: goal_approach_scaler.py  grid_localizer.py  mode_manager.py  nav_test.py  navigate_to_pose_router.py  odom_to_tf_node.py  service_utils.py  vision_obstacle_detector.py
ros2_ws/src/maurice_bot/maurice_nav/scripts/: vision_obstacle_detector
ros2_ws/src/maurice_bot/maurice_nav/src/: description_subscriber.cpp  dynamic_footprint.cpp  lifecycle_service_utils.cpp  mode_manager.cpp  mode_manager_main.cpp  navigate_to_pose_router.cpp  switch_bt_node.cpp
ros2_ws/src/maurice_bot/maurice_nav/test/: test_lifecycle_service_utils.cpp  test_mode_manager.cpp
(+731 files in other folders)
