<?xml version="1.0"?>
<package format="3">
  <name>mars_control_rust</name>
  <version>0.1.0</version>
  <description>Rust implementation of app.py node using rclrs</description>

  <maintainer email="axel@example.com">Axel</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies - these will be built automatically -->
  <build_depend>rosidl_generator_rs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <!-- Built with colcon + cargo via the ROS plugin -->
    <build_type>ament_cargo</build_type>
  </export>
</package>
